k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080

          - path: /login
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080

          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
